# nyaterm

./: .gitignore  .prettierrc  CHANGELOG.md  CLAUDE.md  README.md  README.zh-CN.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: build-release.yml  debug-publish-r2.yml  publish-gitee-release.yml
docs-site/: docusaurus.config.ts  package.json  pnpm-lock.yaml
docs-site/docs/: faq.md  intro.md
docs-site/docs/development/: architecture.md  backend.md  contributing.md  frontend.md  setup.md
docs-site/docs/getting-started/: installation.md  quick-start.md
docs-site/docs/guide/: file-transfer.md  keyboard-shortcuts.md  layout-and-workspace.md  otp-and-auth.md  security.md  session-types.md  ssh-connection.md  sync-and-backup.md  terminal.md  themes.md  translation.md  tunnels-and-proxy.md
docs-site/i18n/en/: code.json
docs-site/src/css/: custom.css
docs-site/src/data/: changelogData.ts
docs-site/src/pages/: changelog.tsx  index.tsx
docs-site/static/examples/: session-import-sample.json
scripts/: build-unlock-rescue.ps1  demo-action-links.sh  demo-file-watch.sh  demo-keyword-highlight-presets.sh  demo-recording-session.sh  demo-remote-stats.sh  demo-terminal-output.sh  patch-xterm-webgl-clear-model.cjs  sync-version.mjs
src/: App.tsx  ChildWindowRouter.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/crates/otp/: Cargo.toml
src-tauri/crates/otp/src/: hmac.rs  hotp.rs  lib.rs  totp.rs
src-tauri/crates/otp/src/alg/: mod.rs  sha1.rs  sha256.rs  sha512.rs
src-tauri/crates/otp/src/encoding/: base32.rs  hex.rs  url.rs
src-tauri/crates/russh-sftp/benches/: upload_benchmark.rs
src-tauri/crates/russh-sftp/src/client/: rawsession.rs  session.rs
src-tauri/crates/russh-sftp/src/client/fs/: file.rs
src-tauri/examples/: nyaterm-unlock-rescue.rs
src-tauri/icons/: icon.icns
src-tauri/icons-macos/: icon.icns
src-tauri/src/: app.rs  import.rs  lib.rs  main.rs  observability.rs  session.rs  sftp.rs  storage.rs  tray.rs  window_state.rs
src-tauri/src/cmd/: ai.rs  ascend_npu.rs  clipboard.rs  connection.rs  gpu.rs  local_fs.rs  log.rs  mod.rs  otp.rs  session.rs  settings.rs  sftp.rs  stats.rs  translate.rs  tunnel.rs
src-tauri/src/commands/: config_cmds.rs  stats.rs
src-tauri/src/config/: cloud_sync.rs  connection.rs  key.rs  mod.rs  proxy.rs  ui.rs
src-tauri/src/config/settings/: ai.rs  appearance.rs  general.rs  interaction.rs  mod.rs  proxy.rs  terminal.rs  transfer.rs
src-tauri/src/core/: backup.rs  capture.rs  cloud_crypto.rs  cloud_sync.rs  gpu.rs  history.rs  importer.rs  input.rs  mod.rs  output.rs  portable_snapshot.rs  pty.rs  recording.rs  serial.rs  session.rs  stats.rs  telnet.rs  watcher.rs  zmodem.rs
src-tauri/src/core/ai/: agent.rs  codex.rs  history.rs  mod.rs  model.rs  parser.rs  prompt.rs  stream.rs  types.rs
src-tauri/src/core/cloud_sync/: history_log.rs  manager.rs  mod.rs  operator.rs  remote.rs
src-tauri/src/core/importer/: electerm.rs  finalshell.rs  merge.rs  mobaxterm.rs  mod.rs  nyaterm_json.rs  securecrt.rs  termius.rs  tests.rs  types.rs  windterm.rs  xshell.rs
src-tauri/src/core/monitoring/: ascend_npu.rs  mod.rs  stats.rs
src-tauri/src/core/portable_snapshot/: apply.rs  build.rs  legacy.rs  tests.rs  types.rs
src-tauri/src/core/sftp/: duplicate.rs  mod.rs  scp_enhanced.rs  scp_normal.rs  sftp_backend.rs  traits.rs  transfer.rs  util.rs
src-tauri/src/core/ssh/: auth.rs  client.rs  io.rs  mod.rs  osc.rs  session.rs  tunnel.rs  x11_forwarding.rs
src-tauri/src/core/terminal_session/: mod.rs
src-tauri/src/core/terminal_session/local/: config.rs  environment.rs  mod.rs  session.rs  tests.rs
src-tauri/src/core/terminal_session/serial/: config.rs  manager.rs  mod.rs  session.rs
src-tauri/src/core/terminal_session/telnet/: auto_login.rs  manager.rs  mod.rs  session.rs  tests.rs  types.rs
src-tauri/src/core/zmodem/: mod.rs  tests.rs  transfer.rs  types.rs
src-tauri/src/platform/: window_transparency.rs
src-tauri/src/storage/: credentials.rs  history.rs  known_hosts.rs  master_key.rs  mod.rs  sessions.rs  settings_impl.rs  tests.rs  util.rs
src-tauri/src/utils/: crypto.rs  fonts.rs
src/components/: DragonflyLogo.tsx  ExternalFileDropOverlay.tsx  NyaTermLogo.tsx  icons.tsx
src/components/app/: AppLayout.tsx  AppPanelContent.tsx
src/components/dialog/: AboutDialog.tsx  AutoUploadDialog.tsx  MoveDialog.tsx  NewSessionDialog.tsx  RenameDialog.tsx
src/components/layout/: ActivityBar.tsx  ChildWindowHeader.tsx  Header.tsx  StatusBar.tsx
src/components/panel/: AIAssistantPanel.tsx  ActiveSessions.tsx  AscendNpuMonitor.tsx  CommandHistory.tsx  DockerManager.tsx  (+7 more)
src/context/: AppContext.tsx  ChildAppProvider.tsx  ThemeContext.tsx  TransferContext.tsx
src/hooks/: useActivityBarController.tsx  useCommandHistory.ts  useConfigTransfer.tsx  useCredentialAutofill.ts  useGlobalShortcuts.ts  useKeywordHighlighter.ts  useRemoteStats.ts  useShellIntegration.ts  useTerminalFileDrop.ts  useTerminalSettings.ts  useTerminalZoom.ts  useUnreadTabs.ts
src/i18n/: index.ts
src/lib/: actionLinksMatcher.ts  aiEvents.ts  aiSettings.ts  aiTerminalRenderer.ts  appWorkspace.ts  backgroundImage.ts  clipboard.ts  cloudSync.ts  codeMirrorFileView.ts  commandSuggestionSuppression.ts  connectionAutoIcon.ts  credentialAutofill.ts  customThemes.ts  defaultFonts.ts  errors.ts  keywordHighlightPresets.ts  keywordHighlighter.ts  logger.ts  nativeFileDrop.ts  platform.ts  sessionInput.ts  shortcutRegistry.ts  tabWindows.ts  temporaryLink.ts  terminalFileDrop.ts  terminalFontSize.ts  terminalInputTracker.ts  terminalZmodemUpload.ts  themes.ts  transferDuplicatePrompt.ts  transferDuplicateResolution.ts  webviewReloadGuard.ts  windowManager.ts  workspaceTabs.ts  xtermImeCompatibility.ts  xtermMacImeCompatibility.ts  xtermPerformance.ts
src/pages/: FilePreviewPage.tsx  NewSessionPage.tsx  QuickCommandPage.tsx  RemoteFileEditorPage.tsx  SettingsPage.tsx
src/types/: global.d.ts
(+134 files in other folders)
