[package]
name = "nyaterm"
version = "1.1.6"
description = "A modern remote terminal workspace built with Tauri, React, and Rust."
authors = ["Kang"]
edition = "2024"

[profile.dev]
opt-level = 0
debug = true
strip = "none"
debug-assertions = true
overflow-checks = true
incremental = true
codegen-units = 256
lto = false
panic = "unwind"
rpath = false

[profile.release]
opt-level = "s"
lto = "thin"
codegen-units = 1
strip = true
debug = false
debug-assertions = false
overflow-checks = false
incremental = false
panic = "abort"
rpath = false

[profile.release-size]
inherits = "release"
opt-level = "s"
lto = true
codegen-units = 1
strip = true
debug = false
panic = "abort"

[profile.release-debug]
inherits = "release"
debug = "line-tables-only"
strip = "none"
split-debuginfo = "unpacked"
panic = "unwind"

[profile.fast-release]
inherits = "release"
opt-level = 1
lto = false
codegen-units = 256
incremental = true
debug = true
strip = "none"
panic = "unwind"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
# Allow common patterns that are noisy under pedantic
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
wildcard_imports = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
struct_excessive_bools = "allow"
too_many_lines = "allow"
unnecessary_wraps = "allow"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "nyaterm_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
nyaterm-otp = { path = "crates/otp" }
tauri = { version = "2", features = ["tray-icon", "protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "io-util",
    "time",
    "fs",
    "process",
] }
russh = { version = "0.61", features = ["des", "dsa"] }
russh-sftp = "2.3.0"
ssh-key = { version = "0.6", features = ["std"] }
portable-pty = "0.8"
uuid = { version = "1", features = ["v4"] }
async-trait = "0.1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "local-time"] }
time = { version = "0.3", features = ["formatting", "local-offset", "macros"] }
tracing-appender = "0.2"
nucleo-matcher = "0.3"
dirs = "6.0.0"
aes-gcm = "0.10"
base64 = "0.22"
rand = "0.8"
sha2 = "0.10"
sha1 = "0.10"
tauri-plugin-dialog = "2"
notify = { version = "8.2.0", features = ["serde"] }
lazy_static = "1.5.0"
open = "5"
tokio-socks = "0.5.2"
async-http-proxy = { version = "1.2.5", features = ["runtime-tokio", "basic-auth"] }
font-kit = "0.14.3"
reqwest = { version = "0.13", features = ["json", "form", "query"] }
genai = "0.6.5"
futures-util = "0.3"
regex = "1"
md-5 = "0.10"
hmac = "0.12"
hex = "0.4"
http = "1"
urlencoding = "2"
zip = "8"
encoding_rs = "0.8"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "bmp", "gif", "webp"] }
rqrr = "0.9"
serialport = "4"
strip-ansi-escapes = "0.2"
arboard = "3"
opendal = { version = "0.55", features = [
    "services-s3",
    "services-webdav",
    "layers-tracing",
] }
redb = "4.1.0"
zmodem2 = "0.5"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-single-instance = "2"

[target.'cfg(windows)'.dependencies]
webview2-com = "0.38.2"
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }

[patch.crates-io]
zmodem2 = { path = "vendor/zmodem2" }
